# webFramework

./: Cargo.toml  Homepage.log.rs  TestMacro.log.rs  log.rs  readme.md  temp.rs
achernar/: Cargo.toml
achernar/src/: html.rs  https.rs  lib.rs  page.rs  settings.rs
macros/: Cargo.toml
macros/src/: lib.rs  loading.rs  oldmacro.rs
pages/: Default.html  clicker.html  clicker.rs
webServer/: Cargo.toml  oldmain
webServer/src/: http_return.rs  main.rs  test.rs
webServer/src/pages/: homepage.html  homepage.rs  mod.rs  test.html  testMacro.rs
webServer/src/shared/: mod.rs  user.rs
webServer/src/temp/: testRoute.rs
