[package]
name = "achernar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
macros = { path = "../macros"}
tokio-tungstenite = "0.19.0"
futures-util = "0.3.28"
phf = "0.11.2"
async-trait = "0.1.72"
fancy-regex = "0.11.0"
regex = "1.9.3"
html_parser = "0.7.0"