[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
serde = "^1.0.0"
serde_json = "^1.0.0"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
handlebars = { version = "^3.0", features = ["dir_source"] }
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
