[package]
name = "webServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


members = [
    "macros"
]

[dependencies]
handlebars = { version = "^3.0", features = ["dir_source"] }
serde = "^1.0.0"
serde_json = "^1.0.0"
macros = { path = "../macros"}
achernar = { path = "../achernar" }
base64 = "0.13"
sha1 = "0.10.5"
phf = "0.11.2"
tokio = { version = "1.29.1", features = ["full"] }
anyhow = "1.0.72"
futures-util = "0.3.28"
tokio-tungstenite = "0.19.0"
lazy_static = "0.1.16"
tracing = "0.1.37"
async-trait = "0.1.72"
